# ftshare_mo

./: README.md  README_EN.md
.github/workflows/: rl-research-ci.yml
market_state_research/: FIRST_FINDINGS_20260715.md  README.md  config.json
market_state_research/scripts/: new_candlestick_request_plan.ps1  normalize_candlesticks.ps1  run_market_state_study.ps1
market_state_research/tests/: bad_candles.json  candles.json
reports/: csi1000_intraday_monitor_report.html  csi1000_intraday_monitor_report.tex
rl_research/: .gitignore  README.md  README_EN.md  pyproject.toml  requirements.txt
rl_research/artifacts/results/: NOT_RUN.md
rl_research/config/: default.yaml
rl_research/notebooks/: csi1000_rl_colab.ipynb
rl_research/sample_data/: synthetic_index.csv
rl_research/src/csi1000_rl/: __init__.py  ablations.py  baselines.py  config.py  data.py  environment.py  features.py  metrics.py  pipeline.py  report.py  train.py
rl_research/templates/: report_not_run_en.html  report_not_run_zh.html
rl_research/tests/: test_data.py  test_environment.py  test_features.py  test_metrics.py
runs/20260709_155132/: csi1000_components.csv  csi1000_snapshots.csv  daily_analysis.json  dashboard.html  knowledge_graph.html  (+7 more)
scripts/: build_fundamental_nlp_explain_report.ps1  build_integrated_morning_report.ps1  ftshare_csi1000_intraday_monitor.ps1  ftshare_csi1000_session_collector.ps1  ftshare_fetch_history_plus_realtime.ps1  ftshare_fetch_realtime_quotes.ps1  ftshare_fetch_realtime_quotes.py  generate_csi1000_knowledge_graph.ps1  run_csi1000_research_agent.ps1
(+21 files in other folders)
