[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "csi1000-rl-research"
version = "0.1.0"
description = "Reproducible FTShare-only CSI 1000 reinforcement-learning timing research"
requires-python = ">=3.10"
[tool.setuptools.packages.find]
where = ["src"]
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]